nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-http
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: python-http
