nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx.test.local
      secretName: nginx-cert
  rules:
    - host: nginx.test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                namespace: argocd
                port:
                  number: 80
