nginx/virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: python-http
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - python-http.test.local
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            destination:
              ref:
                name: python-http
                namespace: default
                kind: Service
                group: ""
                port:
                  number: 80
